# Ticket_Reservation_System

./: CMakeLists.txt  README.md  gui.cpp  gui.hpp  gui_main.cpp  main.cpp  reservation_system.cpp  reservation_system.hpp  structure.txt
test/: CMakeLists.txt  test_reserve_system.cpp
